<resources>
    <string name="app_name">Google</string>
    <string name="create_your_google_account">Create your Google Account</string>
    <string name="you_can_use_letters_numbers_periods"><![CDATA[You can use letters, numbers & periods]]></string>
    <string name="use_my_current_email_address_instead">use my current email address instead</string>
    <string name="password">Password</string>
    <string name="confirmPass">Confirm</string>
    <string name="use_8_or_more_charecters_with_a_mix_of_letters_numbers_symbols"><![CDATA[Use 8 or more charecters with a mix of letters, numbers & symbols]]></string>
    <string name="show_password">Show password</string>
    <string name="next">Next</string>
    <string name="username_gmail_com">userNamegmail.com</string>
    <string name="last_name">Last Name</string>
    <string name="sign_in_instead">Sign in instead</string>
    <string name="first_name">First name</string>
    <string name="username_gmail_com1">userName gmail.com</string>
</resources>