<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--   first name input by the user -->

<com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstName"
        android:layout_width="147dp"
        android:layout_height="55dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="200dp"
        android:hint="@string/first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/careateAccountView"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstName_Edit_Text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textShortMessage">

        </com.google.android.material.textfield.TextInputEditText>


     </com.google.android.material.textfield.TextInputLayout>
    <!--  last name input by the user   -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lasttName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="147dp"
        android:layout_height="55dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="@id/firstName"
        app:layout_constraintTop_toBottomOf="@id/careateAccountView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lasttName_Edit_Text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textShortMessage"
            tools:layout_editor_absoluteX="-71dp"
            tools:layout_editor_absoluteY="407dp">

        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>


    <!--google icon text-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="45dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:hint="@string/username_gmail_com1"
        app:endIconContentDescription="@string/username_gmail_com"
        app:endIconDrawable="@drawable/ic_baseline_check_circle_24"
        app:endIconMode="custom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName"
        app:suffixText="@string/username_gmail_com">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userName_Edit_Text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress">

        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>
    <!--the password and re-pass-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints="password"
        android:hint="@string/password"
        app:endIconContentDescription="@string/password"
        app:endIconDrawable="@drawable/ic_baseline_check_circle_24"
        app:endIconMode="custom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65999997"
        app:passwordToggleEnabled="true"
        android:textColorHint="@color/black"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass_Edit_Text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            >

        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repassword"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/confirmPass"
        app:endIconContentDescription="@string/confirmPass"
        app:endIconDrawable="@drawable/ic_baseline_check_circle_24"
        app:endIconMode="custom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toEndOf="@id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65999997"
        app:passwordToggleEnabled="true"
        android:textColorHint="@color/black"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repass_Edit_Text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            >

        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>




    <ImageView
        android:id="@+id/googleIcon"
        android:layout_width="141dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleX=".4"
        android:scaleY=".4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/googlelogo_color" />
<!--Create Account Text-->
<TextView
        android:id="@+id/careateAccountView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/create_your_google_account"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/googleIcon"
        app:layout_constraintTop_toBottomOf="@+id/googleIcon" />

<!--    sign in by current email director-->
    <TextView
        android:id="@+id/emailInsted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="172dp"
        android:text="@string/use_my_current_email_address_instead"
        android:textColor="#FF0000FF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/userName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@id/userName"
        app:layout_constraintVertical_bias="0.07999998" />
<!--    username instructions details-->
<TextView
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:text="@string/you_can_use_letters_numbers_periods"
        android:textSize="8sp"
        app:layout_constraintBottom_toTopOf="@+id/emailInsted"
        app:layout_constraintEnd_toEndOf="@+id/lasttName"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@id/userName"
        app:layout_constraintVertical_bias="0.19"
        tools:ignore="SmallSp" />
<!--    username input by the user-->


<!--  password conditions -->
<TextView
        android:id="@+id/passConditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/use_8_or_more_charecters_with_a_mix_of_letters_numbers_symbols"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.01999998" />
<!--show password option-->
<CheckBox
        android:id="@+id/checkShowpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintVertical_bias="0.22000003"
        android:text="@string/show_password" />

<!-- sign in escape director-->
<TextView
        android:id="@+id/signIn"
        android:layout_width="132dp"
        android:layout_height="35dp"
        android:text="@string/sign_in_instead"
        android:textColor="#FF0000FF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/checkShowpassword"
        app:layout_constraintTop_toBottomOf="@id/checkShowpassword"
        app:layout_constraintVertical_bias="0.49" />

<Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toEndOf="@id/signIn"
        app:layout_constraintTop_toBottomOf="@id/passConditions"
        app:layout_constraintVertical_bias="0.65999997"
        android:background="#FF0000FF"

        />
</androidx.constraintlayout.widget.ConstraintLayout>